# obwm

./: .gitignore  README.md
api/c/: .gitignore  .parse.c.swo  Makefile  create.c  demos  demos.c  demos.c.2  parse.c  parse_xml.h  socket_xml  socket_xml.c  socket_xml.h  tmp.c
old_openbox/: CHANGELOG  Makefile.in  README.md  configure
old_openbox/data/: menu.xml
old_openbox/event/: Makefile  event  mouse.c
old_openbox/openbox/: .openbox.c.swk  actions.c  debug.c  debug.h  mainloop.c  menuframe.c  openbox.c
openbox-3.4.11.2/: 2  3  Makefile  Makefile.in.Xau  config.status  easy.sh  libtool  libtoole
openbox-3.4.11.2/autom4te.cache/: output.0  output.1  traces.0  traces.1
openbox-3.4.11.2/data/: autostart.sh  autostart.sh.in
openbox-3.4.11.2/m4/: Makefile
openbox-3.4.11.2/openbox/: actions.c  client.c  debug.h  mainloop.c  mouse.c  moveresize.c  openbox  openbox.c  openbox.h  socket_xml.c  socket_xml.h
openbox-3.4.11.2/parser/: libobparser.la  obparser-3.0.pc  parser_libobparser_la-parse.lo
openbox-3.4.11.2/po/: Makefile  Makefile.in
openbox-3.4.11.2/render/: libobrender.la  obrender-3.0.pc  render_libobrender_la-color.lo  render_libobrender_la-font.lo  render_libobrender_la-gradient.lo  render_libobrender_la-image.lo  render_libobrender_la-mask.lo  (+4 more)
research/: hello.c  menu.xml
research/autoconf/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  hello
research/autoconf/.deps/: hello.Po
research/autoconf/autom4te.cache/: output.1  traces.0  traces.1
xml_api/: .parse.c.swo  Makefile  create.c  parse_xml.h
(+63 files in other folders)
